--- a/e-credit-backend/src/main/resources/application.properties
+++ b/e-credit-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=e-credit-backend
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/creditnew
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecredit_database
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
