--- a/e-credit-backend/src/main/resources/application.properties
+++ b/e-credit-backend/src/main/resources/application.properties
@@ -19,3 +19,10 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.open-in-view=false
 logging.level.org.example.ecreditbackend=INFO
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# application.properties
+upload.directory=uploads
+
